--- a/ElectronicDiary/ElectronicDiary.csproj
+++ b/ElectronicDiary/ElectronicDiary.csproj
@@ -72,7 +72,12 @@
     <Compile Include="Schedule.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Source\AdminGroups.cs" />
     <Compile Include="Source\AdminPanel.cs" />
+    <Compile Include="Source\AdminSchedules.cs" />
+    <Compile Include="Source\AdminStudents.cs" />
+    <Compile Include="Source\AdminSubjects.cs" />
+    <Compile Include="Source\AdminTeacher.cs" />
     <Compile Include="Source\LoginPanel.cs" />
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
