Changed objects position

--- a/ElectronicDiary/packages.config
+++ b/ElectronicDiary/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="EntityFramework.ru" version="5.0.0" targetFramework="net45" />
+  <package id="Infragistics.Themes.MetroDark.Wpf" version="1.0.0" targetFramework="net45" />
+  <package id="Infragistics.Themes.MetroLight.Wpf" version="1.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
 </packages>
