--- a/WcfServiceLibraryED/App.config
+++ b/WcfServiceLibraryED/App.config
@@ -58,5 +58,5 @@
 
 
 
-<connectionStrings><add name="ElectronicDiaryDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DATRAX_HOME-ПК\SQLEXPRESS2012;initial catalog=ElectronicDiaryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="ElectronicDiaryDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC\SQLEXPRESS;initial catalog=ElectronicDiaryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
 
